# fart

./: .gitignore  .lefthook.yml  Makefile  README.md  pyproject.toml
bruno/: Get candlestick data.bru  Get markets.bru  bruno.json
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-kve-data-retrieval.ipynb  1.0-kve-exploratory-data-analysis.ipynb  2.0-kve-predictive-modelling.ipynb  2.1-kve-predictive-modelling.ipynb  2.2-kve-predictive-modelling.ipynb  ensemble_methods.ipynb  exploratory_data_analysis.ipynb  predictive_modelling.ipynb  recurrent_neural_networks.ipynb
references/: bitcoin_cadence_events.csv  ltsm_time_series_forecasting.ipynb  microsoft_stock_forecasting_with_lstm.ipynb  sklearn_time_series.ipynb  technical-indicators.md
reports/: stop-loss-strategy.md  technical-indicators.md
src/constants/: __init__.py  colors.py  column_names.py
src/data/: process_data.py  pull_data.py
src/fart/: cli.py  downloader.py  main.py  settings.py  utils.py
src/fart/common/: config.py  constants.py
src/fart/constants/: classes.py  colors.py  feature_names.py  labels.py
src/fart/core/: dashboard.py  exchange.py
src/fart/data/: bitvavo_data.py  candle_data_retriever.py  data_retriever.py  main.py  make_dataset.py
src/fart/features/: calculate_technical_indicators.py  generate_trade_signals.py  parse_timestamp_to_datetime.py  technical_indicators_config.py  trade_signals.py  trade_strategy.py
src/fart/model/: train_test_split.py
src/fart/utils/: __init__.py  converters.py  dashboard.py  get_last_modified_data_file.py  print_in_columns.py  print_scores.py  trade_strategy.py  trader.py  train_test_split.py
src/fart/visualization/: candlestick_chart.py  main.py  plot_confusion_matrix.py
src/features/: __init__.py  calculate_technical_indicators.py
src/utils/: __init__.py  create_timestamp_list.py  print_scores.py
tests/features/: test_trade_strategy.py
tests/model/: test_train_test_split.py
tests/utils/: test_converters.py  test_get_last_modified_data_file.py
