[project]
name = "fart"
version = "0.1.0"
description = "Financial Analysis & Real-time Trading"
authors = [{ name = "Koen van Esterik", email = "koen@vanesterik.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
    "click>=8.3.1",
    "jupyter>=1.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "owslib>=0.35.0",
    "pillow>=12.0.0",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "python-bitvavo-api>=1.4.3",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.8",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[project.scripts]
fart = "fart.cli:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fart"]


[tool.pyright]
include = ["src"]
exclude = ["tests"]
typeCheckingMode = "strict"


[tool.pytest.ini_options]
testpaths = ["tests"]                        # Directories to search for tests
python_files = ["test_*.py"]                 # Test file patterns
python_classes = ["Test*"]                   # Test class patterns
python_functions = ["test_*"]                # Test function patterns
pythonpath = ["src"]                         # Add src to Python path
addopts = [                                  # Additional command-line options
    "-v",                                    # Verbose output
    "--strict-markers",                      # Error on unknown markers
    "--cov=fart",                            # Measure coverage for this package
    "--cov-report=term-missing",             # Show missing lines in terminal
    "--cov-fail-under=80",                   # Fail if coverage < 80%
]
markers = [                                  # Custom markers
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/fart"]                        # What to measure
branch = true                                # Measure branch coverage (if/else)
omit = [                                     # What to exclude - use wildcards that work on Windows
    "__init__.py",
    "cli.py",
]

[tool.coverage.report]
precision = 2                               # Decimal places in coverage report 
show_missing = true                         # Show missing lines in report
skip_covered = false                        # Don't skip fully covered files
